Deployment/fs-le-dev-linkedeye-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      nodeSelector:
        kubernetes.io/hostname: fs-dev1-le

      serviceAccountName: sa-ui

      imagePullSecrets:
        - name: finspot-registry

      containers:
        - name: ui
          image: harbor-dev.finspot.in/ui/ui:2.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          tty: true
          securityContext:
            privileged: true
            runAsUser: 0

          volumeMounts:
            - name: secrets-store-ui
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - mountPath: /vault/keys.json
              name: le
              subPath: vault/keys.json
            - mountPath: /usr/src/monitor
              name: le
              subPath: monitor/etc
            - mountPath: /var/run/docker.sock
              name: host-docker-sock
            - mountPath: /stackstorm/configs
              name: le
              subPath: automation/st2-packs-configs
            - mountPath: /usr/src/logs/
              name: le-noren-core
              subPath: finspot/logs/le
            - mountPath: /usr/src/prom-conf
              name: le
              subPath: prom-conf
            - mountPath: /usr/src/static/app/usericons
              name: le
              subPath: usericons

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"

      volumes:
        - name: secrets-store-ui
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "spc-ui"
        - name: le
          persistentVolumeClaim:
            claimName: data-le
        - name: le-noren-core
          persistentVolumeClaim:
            claimName: le-noren-core
        - name: host-docker-sock
          hostPath:
            path: /var/run/docker.sock

      restartPolicy: Always
