Deployment/fs-le-dev-linkedeye-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
    - port: 81
      targetPort: 8000
      protocol: TCP
  selector:
    app: ui
