Deployment/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: le-site
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: mq
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fs-le-dev1.finspot.in
      secretName: finspot-in-tls
  rules:
  - host: fs-le-dev1.finspot.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 81
      - path: /websocket/
        pathType: Prefix
        backend:
          service:
            name: mq
            port:
              number: 15674
      - path: /apprise/
        pathType: Prefix
        backend:
          service:
            name: apprise-notify-service
            port:
              number: 80
